# slack-mcp

./: .gitignore  DATABRICKS_CONVERSION.md  DEPLOYMENT.md  MIGRATION.md  README.md  app.yaml  databricks.yml  pyproject.toml  quickstart.sh  requirements.txt
.github/workflows/: build.yml
hooks/: apps_build.py
src/slack_server/: __init__.py  app.py  main.py
src/slack_server/static/: index.html
