[project]
name = "slack-mcp-server"
version = "0.1.4"
description = "A Slack MCP server for Databricks Apps"
readme = "README.md"
authors = [
    { name = "Ubie, Inc." }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.10.0",
    "uvicorn>=0.34.2",
    "slack-sdk>=3.33.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/slack_server"]

[tool.hatch.build.hooks.custom]
path = "hooks/apps_build.py"

[project.scripts]
slack-mcp-server = "slack_server.main:main"
